# ChangeLog for dev-python/rdflib
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/rdflib/ChangeLog,v 1.7 2010/01/26 22:17:16 darkside Exp $

  26 Jan 2010; Jeremy Olexa <darkside@gentoo.org> rdflib-2.4.1.ebuild:
  Add ~x86-linux as tested in bug 302359

  04 Sep 2009; Patrick Lauer <patrick@gentoo.org> -rdflib-2.4.0.ebuild:
  Remove old

*rdflib-2.4.1 (10 Aug 2009)

  10 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  rdflib-2.4.0.ebuild, +rdflib-2.4.1.ebuild:
  Version bump. Restrict tests. Set SUPPORT_PYTHON_ABIS.

  23 Dec 2008; Markus Meier <maekke@gentoo.org> rdflib-2.4.0.ebuild:
  add ~amd64, bug #252185

  06 Aug 2008; Jesus Rivero <neurogeek@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

*rdflib-2.4.0 (25 Mar 2008)

  25 Mar 2008; Rob Cakebread <pythonhead@gentoo.org> +metadata.xml,
  +rdflib-2.4.0.ebuild:
  Initial commit. Closes #161492. Thank you Mikael Lammentausta
  <mikael.lammentausta@savonia-amk.fi>, Sam Jacobson <sam@eversoft.co.nz>,
  Sunrise.
