@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/rdflib
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/rdflib/ChangeLog,v 1.7 2010/01/26 22:17:16 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/rdflib/ChangeLog,v 1.8 2010/05/13 21:32:32 arfrever Exp $
+
+*rdflib-3.0.0 (13 May 2010)
+
+  13 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +rdflib-3.0.0.ebuild:
+  Version bump.
 
   26 Jan 2010; Jeremy Olexa <darkside@gentoo.org> rdflib-2.4.1.ebuild:
   Add ~x86-linux as tested in bug 302359
